--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         </div>
                         <div class="grid-item">
                             <a href="https://github.com/Julio-Pambo/">
-                                <figure class="portfolio-item"><img src="images/portfolio/todo-small.png" data-bp="images/portfolio/todo.jpg" data-caption="Example of an optional caption." />
+                                <figure class="portfolio-item"><img src="images/portfolio/todo-small.PNG" data-bp="images/portfolio/todo.jpg" data-caption="Example of an optional caption." />
                                     <figcaption>
                                         <h4 class="h5 mb-0">Todo Quasar App</h4>
                                         <div>julio-pambo.github.io/juliotodo/#/</div>
