chore:alteração de links
Alterei os links para o github

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                                 <figure class="portfolio-item"><img src="images/portfolio/farmacia-small.png" data-bp="images/portfolio/farmacia.jpg" />
                                     <figcaption>
                                         <h4 class="h5 mb-0">App Farmácia</h4>
-                                        <div>github.com/Julio-Pambo</div>
+                                        <div>github.com</div>
                                     </figcaption>
                                 </figure>
                             </a>
@@ -240,17 +240,17 @@
                                 <figure class="portfolio-item"><img src="images/portfolio/restaurante-small.png" data-bp="images/portfolio/restaurante.jpg" data-caption="Example of an optional caption." />
                                     <figcaption>
                                         <h4 class="h5 mb-0">App Restaurante e Bar</h4>
-                                        <div>github.com/Julio-Pambo</div>
+                                        <div>github.com</div>
                                     </figcaption>
                                 </figure>
                             </a>
                         </div>
                         <div class="grid-item">
-                            <a href="https://github.com/Julio-Pambo/">
+                            <a href="https://julio-pambo.github.io/juliotodo/#">
                                 <figure class="portfolio-item"><img src="images/portfolio/todo.jpg" data-bp="images/portfolio/todo.jpg" data-caption="Example of an optional caption." />
                                     <figcaption>
                                         <h4 class="h5 mb-0">Todo Quasar App</h4>
-                                        <div>julio-pambo.github.io/juliotodo/#/</div>
+                                        <div>github.com</div>
                                     </figcaption>
                                 </figure>
                             </a>
@@ -260,7 +260,7 @@
                                 <figure class="portfolio-item"><img src="images/portfolio/agua-small.png" data-bp="images/portfolio/agua.jpg" />
                                     <figcaption>
                                         <h4 class="h5 mb-0">App Fornecedores de Água</h4>
-                                        <div>github.com/Julio-Pambo</div>
+                                        <div>github.com</div>
                                     </figcaption>
                                 </figure>
                             </a>
@@ -270,7 +270,7 @@
                                 <figure class="portfolio-item"><img src="images/portfolio/roupas-small.png" data-bp="images/portfolio/roupas.jpg" />
                                     <figcaption>
                                         <h4 class="h5 mb-0">App para Boutique</h4>
-                                        <div>github.com/Julio-Pambo</div>
+                                        <div>github.com</div>
                                     </figcaption>
                                 </figure>
                             </a>
@@ -280,7 +280,7 @@
                                 <figure class="portfolio-item"><img src="images/portfolio/ferragem-small.png" data-bp="images/portfolio/ferragem.jpg" />
                                     <figcaption>
                                         <h4 class="h5 mb-0">App Ferragem</h4>
-                                        <div>github.com/Julio-Pambo</div>
+                                        <div>github.com</div>
                                     </figcaption>
                                 </figure>
                             </a>
@@ -290,7 +290,7 @@
                                 <figure class="portfolio-item"><img src="images/portfolio/facturacao-small.png" data-bp="images/portfolio/facturacao.jpg" />
                                     <figcaption>
                                         <h4 class="h5 mb-0">App Facturação Aduaneiros</h4>
-                                        <div>github.com/Julio-Pambo</div>
+                                        <div>github.com</div>
                                     </figcaption>
                                 </figure>
                             </a>
@@ -300,7 +300,7 @@
                                 <figure class="portfolio-item"><img src="images/portfolio/microcredito-small.png" data-bp="images/portfolio/microcredito.jpg" />
                                     <figcaption>
                                         <h4 class="h5 mb-0">App Microcrédito</h4>
-                                        <div>github.com/Julio-Pambo</div>
+                                        <div>github.com</div>
                                     </figcaption>
                                 </figure>
                             </a>
