--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                                         <div class="pb-1 fw-bolder">username@skype.com</div>
                                     </div> -->
                                     <div class="col-sm-2">
-                                        <div class="pb-1">Celular:</div>
+                                        <div class="pb-1">Contacto:</div>
                                     </div>
                                     <div class="col-sm-10">
                                         <div class="pb-1 fw-bolder">+258-845970634</div>
